##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-11-20	tboggs <tboggs@users.sourceforge.net>

    Store PCA/LDA eigenvectors in columns, consistent with numpy. Ensure that
    eigen{values,vectors} are in descending order.

    * algorithms/algorithms.py:
      (PrincipalComponents): Eigenvectors are now stored in columns.
      (principal_components): Make sure eigen{values,vectors} are sorted.
      (FisherLinearDiscriminant): Store eigenvectors in columns
      (linear_discriminant):
      - Store eigenvectors in columns
      - Make whitening optional
      (GaussianStats): Store eigenvectors in columns
      (GaussianStats.log_det_cov): New property method
      (TrainingClass):
      - Don't explicitly compute derived stats.
      - Don't save/load derived stats

    Added new tests for PCA and LDA.

    * tests/spymath.py:
      (PCATest): New test for PCA
      (LDATest): New tests for linear discriminant

2013-11-17	tboggs <tboggs@users.sourceforge.net>

    Add property methods to Gaussian stats to compute (and cache) derived
    statistics on-demand.

    * algorithms/algorithms.py:
      (GaussianStats): Added several property methods for derived stats.
      (GaussianStats.__init__): Converted keyword args to positional.

    Added optional `eigs` argument to matrix_sqrt to speed up computation.

    * algorithms/spymath.py (matrix_sqrt): Accept optional `eigs` keyword.

    The ND window created by `view_nd` can now open a dynamic raster image of
    class values that is updated whenever classes are modified in the ND view.

    * graphics/spypylab:
      (MplCallback.connect): Connect self instead of the callback function.
      (MplCallback.__call__): When an exception is encountered, disconnect
      regardless of whether or not the exception is rethrown.